[gd_scene load_steps=12 format=3 uid="uid://dwny4mn2iekgu"]

[ext_resource type="Script" uid="uid://bch2tr8idkj0c" path="res://scenes/pagina_06_conteudo.gd" id="1_63uj5"]
[ext_resource type="Texture2D" uid="uid://bfv2hcktich0r" path="res://assets/imagens/6.png" id="2_i1d6l"]
[ext_resource type="Texture2D" uid="uid://d2bt2wnsw2u40" path="res://assets/imagens/icone_som_ligado.png" id="3_i1d6l"]
[ext_resource type="Texture2D" uid="uid://d1bkgqv326vvu" path="res://assets/imagens/6-1.png" id="4_d6ued"]
[ext_resource type="Texture2D" uid="uid://btei30u4bcv2" path="res://assets/imagens/bola-de-futebol (1).png" id="5_2naxr"]
[ext_resource type="Texture2D" uid="uid://sui177y6ulva" path="res://assets/imagens/6-2.png" id="5_gi26p"]
[ext_resource type="Texture2D" uid="uid://bdxkdsb455yre" path="res://assets/imagens/6-3.png" id="6_2naxr"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2naxr"]
size = Vector2(649.624, 990)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_d6ued"]
size = Vector2(169.5, 113.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gi26p"]
size = Vector2(190.5, 155.5)

[sub_resource type="CircleShape2D" id="CircleShape2D_gi26p"]
radius = 90.02777

[node name="Pagina06Conteudo" type="Control" node_paths=PackedStringArray("botao_som", "botao_avancar", "botao_retroceder", "painel_licao", "destino_caixa", "aviao", "urso", "carro", "bola")]
layout_mode = 3
anchors_preset = 0
mouse_filter = 2
script = ExtResource("1_63uj5")
botao_som = NodePath("TextureRect/BotaoSom")
botao_avancar = NodePath("TextureRect/BotaoAvancar")
botao_retroceder = NodePath("TextureRect/BotaoRetroceder")
painel_licao = NodePath("PainelLicao")
destino_caixa = NodePath("DestinoCaixa")
aviao = NodePath("Brinquedos/Aviao")
urso = NodePath("Brinquedos/Urso")
carro = NodePath("Brinquedos/Carro")
bola = NodePath("Brinquedos/Bola")

[node name="Brinquedos" type="Node2D" parent="."]

[node name="Urso" type="Area2D" parent="Brinquedos"]
z_index = 5
position = Vector2(380, 650)

[node name="SpriteUrso" type="Sprite2D" parent="Brinquedos/Urso"]
scale = Vector2(0.16, 0.18416668)
texture = ExtResource("6_2naxr")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Brinquedos/Urso"]
scale = Vector2(0.2216667, 0.20000002)
shape = SubResource("RectangleShape2D_2naxr")

[node name="Aviao" type="Area2D" parent="Brinquedos"]
z_index = 5
position = Vector2(170, 840)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Brinquedos/Aviao"]
shape = SubResource("RectangleShape2D_d6ued")

[node name="SpriteAviao" type="Sprite2D" parent="Brinquedos/Aviao"]
scale = Vector2(0.56785715, 0.5607143)
texture = ExtResource("4_d6ued")

[node name="Carro" type="Area2D" parent="Brinquedos"]
z_index = 5
position = Vector2(611, 810)

[node name="SpriteCarro" type="Sprite2D" parent="Brinquedos/Carro"]
scale = Vector2(0.6678322, 0.6381119)
texture = ExtResource("5_gi26p")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Brinquedos/Carro"]
shape = SubResource("RectangleShape2D_gi26p")

[node name="Bola" type="Area2D" parent="Brinquedos"]
z_index = 5
position = Vector2(400, 900)

[node name="SpriteBola" type="Sprite2D" parent="Brinquedos/Bola"]
scale = Vector2(0.6678322, 0.6381119)
texture = ExtResource("5_2naxr")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Brinquedos/Bola"]
shape = SubResource("CircleShape2D_gi26p")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1.0
offset_right = 767.0
offset_bottom = 1024.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("2_i1d6l")

[node name="BotaoRetroceder" type="Button" parent="TextureRect"]
light_mask = 0
visibility_layer = 0
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -110.0
offset_right = 73.0
offset_bottom = -62.0
grow_vertical = 0
mouse_filter = 2

[node name="BotaoAvancar" type="Button" parent="TextureRect"]
light_mask = 0
visibility_layer = 0
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -72.0
offset_top = -105.0
offset_right = -23.0
offset_bottom = -62.0
grow_horizontal = 0
grow_vertical = 0
mouse_filter = 2
text = "
"

[node name="BotaoSom" type="Button" parent="TextureRect"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.282
anchor_top = 0.287
anchor_right = 0.282
anchor_bottom = 0.287
offset_left = 467.424
offset_top = -276.888
offset_right = 527.424
offset_bottom = -223.888
mouse_filter = 2
icon = ExtResource("3_i1d6l")
flat = true

[node name="DestinoCaixa" type="Marker2D" parent="."]
position = Vector2(94, 606)
gizmo_extents = 138.4

[node name="PainelLicao" type="Panel" parent="."]
physics_interpolation_mode = 1
layout_mode = 0
offset_left = 154.0
offset_top = 567.0
offset_right = 545.0
offset_bottom = 707.0

[node name="Label" type="Label" parent="PainelLicao"]
layout_mode = 0
offset_left = 30.0
offset_top = 22.0
offset_right = 372.0
offset_bottom = 149.0
text = "Sala organizada! Cuidar do espaço coletivo é respeitar a todos que convivem nele. A organização faz parte da inteligência ética"
autowrap_mode = 2

[connection signal="pressed" from="TextureRect/BotaoRetroceder" to="." method="_on_botao_retroceder_pressed"]
[connection signal="pressed" from="TextureRect/BotaoAvancar" to="." method="_on_botao_avancar_pressed"]
[connection signal="pressed" from="TextureRect/BotaoSom" to="." method="_on_botao_som_pressed"]
